fix spacing between prod cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,3 +35,7 @@ img {
   user-drag: none;
   -webkit-user-drag: none;
 }
+
+button {
+  color: #000000;
+}
